--- a/team.html
+++ b/team.html
@@ -14,7 +14,7 @@
 <body> <!-- Début du Body -->
     <div id="navbar"> <!-- Début de la Navbar -->
         <div class="topnav" id="myTopnav"> 
-            <a href="index.html" class="active">Home</a>
+            <a href="test.html" class="active">Home</a>
             <a href="team.html">Equipe</a>
             <a href="#contact">Contact</a>
             <a href="#about">About</a>
