--- a/test.html
+++ b/test.html
@@ -58,7 +58,7 @@
 </div> <!-- Début de la div main -->
 
 <footer> <!-- Début de la div Footer -->
-    <p>Mentions Légales - Réseaux sociaux - Crédits</p>
+    <p>Mentions yLégales - Réseaux sociaux - Crédits</p>
 </footer> <!-- Fin de la div Footer -->
 
 <script type="text/javascript" src="fichier.js"></script>
