clear responsive js function issue

--- a/index.html
+++ b/index.html
@@ -33,12 +33,13 @@
 </div> <!-- Fin de la div sidenav -->
 <div id="main"> <!-- Début de la div main -->
     <div id="navbar"> <!-- Début de la div navbar -->
-        <div class="topnav"> <!-- Début de la div topnav -->
+        <div class="topnav" id="myTopnav"> <!-- Début de la div topnav -->
             <a href="index.html" class="active">Home</a>
             <a href="team.html">Equipe</a>
             <a href="contact.html">Contact</a>
             <a href="about.html">About</a>
-            <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+            <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
+        </div>  
         </div> <!-- Fin de la div topnav -->
     </div> <!-- Fin de la div navbar -->
 </div> <!-- Fin de la div main -->
