--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
     </div> <!-- Fin de la div navbar -->
 </div> <!-- Fin de la div main -->
 
-    <div class="container"> <!-- Début de la div container -->
+    <div class="container2"> <!-- Début de la div container -->
             <h5>Formulaire de Contact</h5>
             <p>Si vous souhaitez nous contacter, veuillez utiliser notre formulaire ci-dessous : </p>
         <form action="/action_page.php"> <!-- Début de la form -->
