--- a/index.html
+++ b/index.html
@@ -30,11 +30,55 @@
             <a href="index.html">Riesling</a>
   </div> <!-- Fin de la div sidebar_content2 -->
   <a href="page2.html"><button style="margin-left: -2%" class="button button5">Voir les Résultats</button></a>
+
 </div> <!-- Fin de la div sidenav -->
+
+<div id="myfoodSidenav" class="sidenav"> 
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav2()">&times;</a>
+
+    <div id="sidebar_content"> 
+        <h1 class="food">SELECTIONNEZ UNE CATEGORIE DE PLAT:</h1>
+        <ul>
+            <li>Apéritif</li>
+            <li>Entrée</li>
+            <li>Plat Principal</li>
+            <li>Fromage</li>
+            <li>Dessert</li>
+        </ul>
+    </div> 
+
+    <div id="sidebar_content2"> 
+        <h1 class="food">SELECTIONNEZ UN TYPE DE PLAT:</h1>
+        <ul>
+            <li>Viande</li>
+            <li>Légumes</li>
+            <li>Plat unique</li>
+            <li>Poisson</li>
+            <li>Fruits de mer et crustacés</li>
+            <li>Fruits</li>
+            <li>Autres desserts</li>
+        </ul>
+    </div> 
+
+    <div id="sidebar_content3"> 
+        <h1 class="food">SELECTIONNEZ PAR INGREDIENT PRINCIPAL:</h1>
+        <ul>
+            <li>Veau</li>
+            <li>Boeuf</li>
+            <li>Agneau</li>
+            <li>Porc</li>
+            <li>....</li>
+            <li>...</li>
+            <li>....</li>
+        </ul>
+    </div> 
+    
+    <a href="accords.html"><button style="margin-left: -2%" class="button button5">Voir les Résultats</button></a>
+</div>
 <div id="main"> <!-- Début de la div main -->
     <div id="navbar"> <!-- Début de la div navbar -->
         <div class="topnav" id="myTopnav"> <!-- Début de la div topnav -->
-            <a href="index.html" class="active">Home</a>
+            <a href="index.html" class="active"><img src="Images/logoWWW.png" alt="logo"> </a>
             <a href="team.html">Equipe</a>
             <a href="contact.html">Contact</a>
             <a href="about.html">About</a>
@@ -52,7 +96,7 @@
                 <span style="font-size:30px;cursor:pointer" onclick="openNav()">VIN</span>
             </div> <!-- Fin de la div ouvrir -->
             <div id="ouvrir2"> <!-- Début de la div ouvrir2 -->
-                <span style="font-size:30px;cursor:pointer" onclick="openNav()">PLAT</span>
+                <span style="font-size:30px;cursor:pointer" onclick="openNav2()">PLAT</span>
             </div> <!-- Fin de la div ouvrir2 -->
         </div> <!-- Fin de la div association -->
 
