--- a/tests_julie/about.html
+++ b/tests_julie/about.html
@@ -64,7 +64,7 @@
             </div>   
                 </p>
             <div class="col-4">
-                <img class="biglogo" src="images/logo.png" alt="Logo plat avec couverts et bouteille de vin sur une assiette">
+                <img class="biglogo" src="Images/logoWWW.png" alt="Logo">
             </div>
         </div>
     </div> 
