--- a/team.html
+++ b/team.html
@@ -28,15 +28,12 @@
     <a id="test" href="https://github.com/juliedi">
     </a>
         <h6>JulieDi</h6>
-    <a class="deux" id="test2" href="https://github.com/EpicWAX">
-    </a>
-        <h6>EpicWAX</h6>
-    <a class="deux" id="test3" href="https://github.com/Kateya">
-    </a>
-        <h6>Kateya</h6>
     <a class="deux" id="test2" href="https://github.com/NinjaRetroGaming">
     </a>
         <h6>Ninja</h6>
+    <a class="deux" id="test" href="https://github.com/EpicWAX">
+    </a>
+        <h6>EpicWAX</h6>
 </div> <!-- Début de la div rond -->
 <footer> <!-- Début de la div Footer -->
     <p>Mentions Légales - Réseaux sociaux - Crédits</p>
