final base html js css building

--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
 <div id="main"> <!-- Début de la div main -->
     <div id="navbar"> <!-- Début de la div navbar -->
         <div class="topnav"> <!-- Début de la div topnav -->
-            <a href="index.html" class="active">Home</a>
+            <a href="index.html" class="active"><img style="height: 17px;" src="Images/logoWWW.png" alt="logo"></a>
             <a href="team.html">Equipe</a>
             <a href="contact.html">Contact</a>
             <a href="about.html">About</a>
@@ -26,7 +26,8 @@
 
     <div class="container2"> <!-- Début de la div container -->
             <h5>Formulaire de Contact</h5>
-            <p>Si vous souhaitez nous contacter, veuillez utiliser notre formulaire ci-dessous : </p>
+            <p>Si vous souhaitez nous contacter, veuillez utiliser notre formulaire ci-dessous : <br>
+            Un commentaire? Une suggestion? Une question à nous poser? <br> N'hésitez pas à nous les transmettre par le biais du formulaire ci-dessous :</p>
         <form action="/action_page.php"> <!-- Début de la form -->
                 <label for="fname">Votre Prenom</label>
                 <input type="text" id="fname" name="firstname" placeholder="Votre prenom">
@@ -49,7 +50,7 @@
         </div> <!-- Fin de la div container -->
 
 <footer> <!-- Début de la div Footer -->
-    <p>Mentions Légales - Réseaux sociaux - Crédits</p>
+    <p>Mentions Légales - Réseaux sociaux - « L'abus d'alcool est dangereux pour la santé, consommez avec modération »</p>
 </footer> <!-- Fin de la div Footer -->
 
 </body> <!-- Fin du Body -->
