--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 <div id="main"> <!-- Début de la div main -->
     <div id="navbar"> <!-- Début de la div navbar -->
         <div class="topnav" id="myTopnav"> <!-- Début de la div topnav -->
-            <a href="index.html" class="active"><img src="Images/logoWWW.png" alt="logo"> </a>
+            <a href="index.html" class="active"><img style="height: 17px;" src="Images/logoWWW.png" alt="logo"></a>
             <a href="team.html">Equipe</a>
             <a href="contact.html">Contact</a>
             <a href="about.html">About</a>
@@ -88,20 +88,20 @@
     </div> <!-- Fin de la div navbar -->
 </div> <!-- Fin de la div main -->
     <div class="titles"> <!-- Début de la div titles -->
-            <h1>Lorem Ipsum</h1>
-            <P>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam augue arcu, dapibus ut consequat a, euismod eu nulla. Morbi hendrerit vel est sed facilisis.</P>        
+            <h1>What With (my) Wine?</h1>
+            <P>WWW est un moteur qui recherche les meilleurs accords entre plats et vins et inversement entre vins et plats.</P>        
     </div> <!-- Fin de la div titles -->
         <div id="association"> <!-- Début de la div association -->
             <div id="ouvrir"> <!-- Début de la div ouvrir -->
-                <span style="font-size:30px;cursor:pointer" onclick="openNav()">VIN</span>
+                <span style="font-size:30px;cursor:pointer;color:white" onclick="openNav()">VIN</span>
             </div> <!-- Fin de la div ouvrir -->
             <div id="ouvrir2"> <!-- Début de la div ouvrir2 -->
-                <span style="font-size:30px;cursor:pointer" onclick="openNav2()">PLAT</span>
+                <span style="font-size:30px;cursor:pointer;color:white" onclick="openNav2()">PLAT</span>
             </div> <!-- Fin de la div ouvrir2 -->
         </div> <!-- Fin de la div association -->
 
 <footer> <!-- Début de la div Footer -->
-    <p>Mentions Légales - Réseaux sociaux - Crédits</p>
+    <p>Mentions Légales - Réseaux sociaux - « L'abus d'alcool est dangereux pour la santé, consommez avec modération »</p>
 </footer> <!-- Fin de la div Footer -->
 
 <script type="text/javascript" src="fichier.js"></script>
