--- a/about.html
+++ b/about.html
@@ -11,13 +11,13 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <title>WWW</title>
-</head> 
+</head>
 <body> 
     <!-- navbar -->
     <div id="main"> 
         <div id="navbar"> 
             <div class="topnav"> 
-                <a href="index.html" class="active">Home</a>
+                <a href="index.html" class="active"><img style="height: 17px;" src="Images/logoWWW.png" alt="logo"></a>
                 <a href="team.html">Equipe</a>
                 <a href="contact.html">Contact</a>
                 <a href="about.html">About</a>
@@ -68,7 +68,7 @@
             </div>
         </div>
     </div> 
-    
+
     <footer> 
         <p>Mentions Légales - Réseaux sociaux - « L'abus d'alcool est dangereux pour la santé, consommez avec modération »</p>
     </footer> 
