--- a/team.html
+++ b/team.html
@@ -15,7 +15,7 @@
 <div id="main"> <!-- Début de la div main -->
     <div id="navbar"> <!-- Début de la div navbar -->
         <div class="topnav"> <!-- Début de la div topnav -->
-            <a href="index.html" class="active">Home</a>
+            <a href="index.html" class="active"><img style="height: 17px;" src="Images/logoWWW.png" alt="logo"></a>
             <a href="team.html">Equipe</a>
             <a href="contact.html">Contact</a>
             <a href="about.html">About</a>
@@ -36,7 +36,7 @@
         <h6>EpicWAX</h6>
 </div> <!-- Début de la div rond -->
 <footer> <!-- Début de la div Footer -->
-    <p>Mentions Légales - Réseaux sociaux - Crédits</p>
+    <p>Mentions Légales - Réseaux sociaux - « L'abus d'alcool est dangereux pour la santé, consommez avec modération »</p>
 </footer> <!-- Fin de la div Footer -->
 
 </body> <!-- Fin du Body -->
