send tests_julie folder

--- a/about.html
+++ b/about.html
@@ -61,15 +61,15 @@
                 <h3> Précautions</h3>
                 <p>WWW n'a aucunement vocation à faire la promotion de la consommation d'alcool.
                     De par sa richesse, WWW vous fera peut-être découvrir des vins que vous ne connaissiez pas et vous donnera à coup sûr des idées pour cuisiner !
-            </div>   
+            </div>
                 </p>
             <div class="col-4">
-                <img class="biglogo" src="Images/logoWWW.png" alt="Logo">
+                <img class="biglogo" src="Images/logo.png" alt="Logo">
             </div>
         </div>
     </div> 
 
-    <footer> 
+    <footer class="about_footer"> 
         <p>Mentions Légales - Réseaux sociaux - « L'abus d'alcool est dangereux pour la santé, consommez avec modération »</p>
     </footer> 
 
