html css js modifs building

--- a/page2.html
+++ b/page2.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Data_Project">
-    <meta name="author" content="JulieDi, EpicWaxx, Kateya, NinjaRetroGaming">
+    <meta name="author" content="Julie Dietsch, Quentin Husler, Nicola Farion">
     <meta name="keywords" content="HTML,CSS,Php,JavaScript, AngularJs">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="stylesheet" href="style2.css">
     <title>WWW</title>
@@ -34,7 +35,7 @@
 <div id="main"> <!-- Début de la div main -->
     <div id="navbar"> <!-- Début de la div navbar -->
         <div class="topnav"> <!-- Début de la div topnav -->
-            <a href="index.html" class="active">Home</a>
+            <a href="index.html" class="active"><img style="height: 17px;" src="Images/logoWWWwhite.png" alt="logo"></a>
             <a href="team.html">Equipe</a>
             <a href="contact.html">Contact</a>
             <a href="about.html">About</a>
@@ -68,9 +69,13 @@
         </div> <!-- Fin de la div ttlescadres -->
     </div> <!-- Fin de la div flex_div -->   
     
-<footer> <!-- Début de la div Footer -->
-    <p>Mentions Légales - Réseaux sociaux - Crédits</p>
-</footer> <!-- Fin de la div Footer -->
+<footer id="mentions" class="about_footer"> 
+    <p class="footer">
+        <a href="mentions_legales.html">Mentions Légales</a> 
+        <a href="https://www.facebook.com/AccessCodeSchool/"><i class="fa fa-facebook-official fa-2x" aria-hidden="true"></i></a>
+        « L'abus d'alcool est dangereux pour la santé, consommez avec modération »
+    </p>
+</footer>
 
 <script type="text/javascript" src="fichier.js"></script>
 <script type="text/javascript" src="afficher_cacher_div.js"></script>
