--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Data_Project">
-    <meta name="author" content="JulieDi, EpicWaxx, Kateya, NinjaRetroGaming">
+    <meta name="author" content="Julie Dietsch, Quentin Husler, Nicola Farion">
     <meta name="keywords" content="HTML,CSS,Php,JavaScript, AngularJs">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>WWW</title>
@@ -73,12 +74,12 @@
         </ul>
     </div> 
     
-    <a href="accords.html"><button style="margin-left: -2%" class="button button5">Voir les Résultats</button></a>
+    <a href="page2.html"><button style="margin-left: -2%" class="button button5">Voir les Résultats</button></a>
 </div>
 <div id="main"> <!-- Début de la div main -->
     <div id="navbar"> <!-- Début de la div navbar -->
         <div class="topnav" id="myTopnav"> <!-- Début de la div topnav -->
-            <a href="index.html" class="active"><img style="height: 17px;" src="Images/logoWWW.png" alt="logo"></a>
+            <a href="index.html" class="active"><img style="height: 17px;" src="Images/logoWWWwhite.png" alt="logo"></a>
             <a href="team.html">Equipe</a>
             <a href="contact.html">Contact</a>
             <a href="about.html">About</a>
@@ -100,9 +101,13 @@
             </div> <!-- Fin de la div ouvrir2 -->
         </div> <!-- Fin de la div association -->
 
-<footer> <!-- Début de la div Footer -->
-    <p>Mentions Légales - Réseaux sociaux - « L'abus d'alcool est dangereux pour la santé, consommez avec modération »</p>
-</footer> <!-- Fin de la div Footer -->
+<footer id="mentions" class="about_footer"> 
+    <p class="footer">
+        <a href="mentions_legales.html">Mentions Légales</a>
+        <a href="https://www.facebook.com/AccessCodeSchool/"><i class="fa fa-facebook-official fa-2x" aria-hidden="true"></i></a>
+        « L'abus d'alcool est dangereux pour la santé, consommez avec modération »
+    </p>
+</footer>
 
 <script type="text/javascript" src="fichier.js"></script>
 <script type="text/javascript" src="afficher_cacher_div.js"></script>
