--- a/about.html
+++ b/about.html
@@ -28,59 +28,48 @@
     </div> 
 
     <!--Contenu div about-->
-    <div class="container">
+    <!--Contenu div about-->
+    <div class="container" id="about"> 
         <div class="row">
             <div class="col-12">
-                <h1 id="mentions"> Mentions légales</h1>
+                <h1 id="main_title">What With (my) Wine?</h1>
             </div>
         </div>
-        <div id="rang1" class="row">
-            <div id="infos" class="col-6">
-                <h2>Informations générales</h2>    
-                <div class="row">
-                    <div class="col-12 col-lg-6">
-                        <span>Raison sociale :</span> 
-                        <p>WWW</p>
-                        <span>Forme juridique :</span> 
-                        <p>Ca dépend des jours</p>
-                        <span>Siret :</span> 
-                        <p>007 007 007 00007</p>
-                    </div>
-                    <div class="col-12 col-lg-6">
-                        <span>Siège social :</span> 
-                        <p> Chez nos formateurs </p>
-                        <p>Au 6, rue de l'Etang</p>
-                        <p>90000 BELFORT</p> 
-                        <span>Téléphone :</span> 
-                        <p>Cherchez dans l'annuaire</p>
-                    </div>
-                </div>  
-                <div id="email" class="col-12 col-lg-6">
-                   <p class="mention_mail">Email:www@codeur.online</p>
-                </div>
-            </div>
-            <div id="droits" class="col-12 col-lg-6">
-                <h2>Droits d'auteur et crédits</h2>    
-                <p id="logomention">Le présent site est notre propriété. Toute copie, totale ou partielle, est interdite sans le consentement écrit de notre équipe de choc.</p> 
-                <p class="m-logo">Le logo a été créé par notre équipe. Trop de croquis moches ont été produits pour laisser ce résultat probant sans copyright. </p>
-                <p class="credits">Remerciements au site <a href="https://unsplash.com/">Unsplash.com</a> et aux photographes contributeurs pour leurs magnifiques photos, libres de droit(s), illustrant ce site :</p>   
-                <p class="credits2"> Anthony DELANOIX, Alex Guillaume,Alex Munsell, Alison Marras,Anton Darius, Brenda Godinez, Brooke Lark, Cala, Casey Lee,Chris Ralston, chuttersnap, Davide Cantelli, Janko Ferlič, Jessy Smith,Jez Timms, John Canelis,Katarzyna Pracuch, Mantra Media,Markus Spiske,Mike Tinnion,Monika Grabkowska, pan xiaozhen, Pierre Gui,rawpixel.com, Roberta Sorge, Sweet Ice Cream Photography, Stefan Johnson, Toa Heftiba, Vitchakorn Koonyosying, Eduardo Roda Lopes, Gianna Ciaramello, Igor Miske, Jay Wennington, Joyce).</p>
-            </div>
-        </div>
-        <div id="rang2" class="row">
-            <div id="maj" class="col-12 col-lg-6">
-                <h2>Conception, réalisation et mises à jour</h2>    
-                <p class="realisation">Le présent site a été conçu et réalisé par notre équipe. Les mises à jour du contenu ne sont pas effectuées parceque nous avons un titre pro à préparer et pour certains des jeux à finir</p>  
-            </div>
 
-            <div id="droits" class="col-12 col-lg-6">
-                <h2>Hébergement</h2>   
-                <p>Le présent site est hébergé par la société <strong>O</strong>n<strong>V</strong>a<strong>H</strong>acker</p>
-                <p>2, Rue des hackeurs fous</p>    
-                <p>90105 LE MONDE A L'ENVERS</p>    
+        <div class="row">
+
+            <div class="col-lg-6" id="utilite"> 
+                    <h3>Pourquoi WWW deviendra votre meilleur sommelier ou restaurateur?</h3>
+                    <p>WWW vous permet de répondre à des questions toutes simples mais que tout le monde se pose au quotidien : <br>
+                    Samedi soir je reçois mes amis à dîner, que devrai-je leur servir comme vin pour accompagner au mieux le boeuf bourguignon que je vais leur cuisiner ?<br>
+                    J'ai dans ma cave une bouteille de Pomerol qui est arrivée à maturité, avec quels plats pourrai-je le déguster pour en profiter au maximum ?<br>
+                    J'ai l'habitude de boire un Sauternes avec du foie gras, n'y aurait-il pas d'autres vins qui feraient tout aussi bien l'affaire (et peut-être même mieux) ? N'est-ce pas l'occasion de découvrir une autre association de saveurs ?
+                    </p>
+            </div> 
+        
+            <div class="col-lg-6" id="infos"> 
+                <h3>Informations générales</h3> 
+                <p>WWW est un moteur de recherche des meilleurs accords entre plats et vins (mets et vins) et vins et plats.</p>                
+                <p>La base de données provient de la plateforme ouverte de données publiques(open datas), consultables sur <a href="https://www.data.gouv.fr/fr/"></a>data.gouv.fr</p>
+                <p>Il est entièrement gratuit et a été développé par notre équipe dans le cadre d'un projet d'études</p>
+                <p>Le moteur de recherche de WWW fonctionne dans les 2 sens :
+                Pour un plat ou un mets, il recherche les meilleurs accords de vins.<br>
+                Pour un vin, il recherche les meilleurs accords de plats ou mets.</p>
+            </div>  
+
+        </div>
+        <div class="row">
+            <div class="col-8">
+                <h3> Précautions</h3>
+                <p>WWW n'a aucunement vocation à faire la promotion de la consommation d'alcool.
+                    De par sa richesse, WWW vous fera peut-être découvrir des vins que vous ne connaissiez pas et vous donnera à coup sûr des idées pour cuisiner !
+            </p>
+            </div>    
+            <div class="col-4">
+                <img class="biglogo" src="images/logo.png" alt="Logo plat avec couverts et bouteille de vin sur une assiette">
             </div>
         </div>
-    </div>
+    </div> 
 
 <footer id="mentions" class="about_footer"> 
     <p class="footer">
