Codes ok pour choix vin et cru

--- a/page2.html
+++ b/page2.html
@@ -50,21 +50,12 @@
         <div id="ttlescadres"> <!-- Début de la div ttlescadres -->
             <div id="cadre1"> <!-- Début de la div cadre1 -->
                 <h4>VOUS POUVEZ ASSOCIER VOTRE VIN AVEC :</h4>
-                <div id="sansnom"> <!-- Début de la div sansnom -->
-                    <div class="carre" id="content_cadre"> <!-- Début de la div content_cadre -->
-                    </div> <!-- Fin de la div content_cadre -->
-                    <h3>Lorem Ipsum <br> Dolor Amet</h3>
-                </div> <!-- Fin de la div sansnom -->
-                <div id="sansnom"> <!-- Début de la div sansnom -->
-                    <div class="carre" id="content_cadre"> <!-- Début de la div content_cadre -->
-                    </div> <!-- Fin de la div content_cadre -->
-                    <h3>Lorem Ipsum <br> Dolor Amet</h3>
-                </div> <!-- Fin de la div sansnom -->
-                <div id="sansnom"> <!-- Début de la div sansnom -->
-                    <div class="carre" id="content_cadre"> <!-- Début de la div content_cadre -->
-                    </div> <!-- Fin de la div content_cadre -->
-                    <h3>Lorem Ipsum <br> Dolor Amet</h3>
-                </div> <!-- Fin de la div sansnom -->
+                <ul>
+                    <li>LOREM IPSUM 1</li>
+                    <li>LOREM IPSUM 2</li>
+                    <li>LOREM IPSUM 3</li>
+                    <li>LOREM IPSUM 4</li>
+                </ul>
             </div> <!-- Fin de la div cadre1 -->
         </div> <!-- Fin de la div ttlescadres -->
     </div> <!-- Fin de la div flex_div -->   
