retour de la navbar en index et modif des extensions de fichier en php au lieu de html

--- a/page2.html
+++ b/page2.html
@@ -18,27 +18,27 @@
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <div id="sidebar_content"> <!-- Début de la div sidebar_content -->
     <h1 class="vin">SELECTIONNEZ UN TYPE DE VIN:</h1>
-        <a href="index.html">Blanc</a>
-        <a href="index.html">Pétillant</a>
-        <a href="index.html">Rosé</a>
-        <a href="index.html">Rouge</a>
+        <a href="index.php">Blanc</a>
+        <a href="index.php">Pétillant</a>
+        <a href="index.php">Rosé</a>
+        <a href="index.php">Rouge</a>
   </div> <!-- Fin de la div sidebar_content -->
   <div id="sidebar_content2"> <!-- Début de la div sidebar_content2 -->
         <h1 class="cru">SELECTIONNEZ UN CRU:</h1>
-            <a href="index.html">Rouge</a>
-            <a href="index.html">Gewurtzraminer</a>
-            <a href="index.html">Pinot</a>
-            <a href="index.html">Riesling</a>
+            <a href="index.php">Rouge</a>
+            <a href="index.php">Gewurtzraminer</a>
+            <a href="index.php">Pinot</a>
+            <a href="index.php">Riesling</a>
   </div> <!-- Fin de la div sidebar_content2 -->
   <button class="button button5">Voir les Résultats</button>
 </div> <!-- Fin de la div sidenav -->
 <div id="main"> <!-- Début de la div main -->
     <div id="navbar"> <!-- Début de la div navbar -->
         <div class="topnav"> <!-- Début de la div topnav -->
-            <a href="index.html" class="active"><img style="height: 17px;" src="Images/logoWWWwhite.png" alt="logo"></a>
-            <a href="team.html">Equipe</a>
-            <a href="contact.html">Contact</a>
-            <a href="about.html">About</a>
+            <a href="index.php" class="active"><img style="height: 17px;" src="Images/logoWWWwhite.png" alt="logo"></a>
+            <a href="team.php">Equipe</a>
+            <a href="contact.php">Contact</a>
+            <a href="about.php">About</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
         </div> <!-- Fin de la div topnav -->
     </div> <!-- Fin de la div navbar -->
@@ -62,7 +62,7 @@
     
 <footer id="mentions" class="about_footer"> 
     <p class="footer">
-        <a href="mentions_legales.html">Mentions Légales</a> 
+        <a href="mentions_legales.php">Mentions Légales</a> 
         <a href="https://www.facebook.com/AccessCodeSchool/"><i class="fa fa-facebook-official fa-2x" aria-hidden="true"></i></a>
         « L'abus d'alcool est dangereux pour la santé, consommez avec modération »
     </p>
